// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interweave (with emoji) renders a single emoji enlarged 1`] = `
<Element tagName="div">
  <div>
    <Emoji
      key="0"
      enlargeEmoji
      emojiLargeSize="3em"
      emojiPath="{{hexcode}}"
      emojiSize="1em"
      emojiSource={{ compact: false, locale: "en", version: "latest" }}
      emoticon=""
      hexcode="1F408"
      renderUnicode={false}
      shortcode=":cat:"
      unicode=""
    >
      <img
        alt="🐈️"
        aria-label="cat"
        data-hexcode="1F408"
        data-shortcodes=":cat:"
        data-unicode="🐈️"
        src="1F408"
        style={{ display: "inline-block", verticalAlign: "middle", width: "3em", height: "3em" }}
        title="cat"
      />
    </Emoji>
  </div>
</Element>
`;

exports[`Interweave (with emoji) renders emoji shortcode as unicode 1`] = `
<Element tagName="div">
  <div>
    This has 
    <Emoji
      key="0"
      renderUnicode
      emojiLargeSize="3em"
      emojiPath="{{hexcode}}"
      emojiSize="1em"
      emojiSource={{ compact: false, locale: "en", version: "latest" }}
      emoticon=""
      enlargeEmoji={false}
      hexcode="1F408"
      shortcode=":cat:"
      unicode=""
    >
      <span>🐈️</span>
    </Emoji>
     and 
    <Emoji
      key="1"
      renderUnicode
      emojiLargeSize="3em"
      emojiPath="{{hexcode}}"
      emojiSize="1em"
      emojiSource={{ compact: false, locale: "en", version: "latest" }}
      emoticon=""
      enlargeEmoji={false}
      hexcode="1F415"
      shortcode=":dog:"
      unicode=""
    >
      <span>🐕️</span>
    </Emoji>
     shortcodes.
  </div>
</Element>
`;

exports[`Interweave (with emoji) renders emoji unicode (escapes) as unicode 1`] = `
<Element tagName="div">
  <div>
    This has 
    <Emoji
      key="0"
      renderUnicode
      emojiLargeSize="3em"
      emojiPath="{{hexcode}}"
      emojiSize="1em"
      emojiSource={{ compact: false, locale: "en", version: "latest" }}
      emoticon=""
      enlargeEmoji={false}
      hexcode="1F431"
      shortcode=""
      unicode="🐱"
    >
      <span>🐱</span>
    </Emoji>
     and 
    <Emoji
      key="1"
      renderUnicode
      emojiLargeSize="3em"
      emojiPath="{{hexcode}}"
      emojiSize="1em"
      emojiSource={{ compact: false, locale: "en", version: "latest" }}
      emoticon=""
      enlargeEmoji={false}
      hexcode="1F436"
      shortcode=""
      unicode="🐶"
    >
      <span>🐶</span>
    </Emoji>
     shortcodes.
  </div>
</Element>
`;

exports[`Interweave (with emoji) renders emoji unicode (literals) as unicode 1`] = `
<Element tagName="div">
  <div>
    This has 
    <Emoji
      key="0"
      renderUnicode
      emojiLargeSize="3em"
      emojiPath="{{hexcode}}"
      emojiSize="1em"
      emojiSource={{ compact: false, locale: "en", version: "latest" }}
      emoticon=""
      enlargeEmoji={false}
      hexcode="1F408"
      shortcode=""
      unicode="🐈️"
    >
      <span>🐈️</span>
    </Emoji>
     and 
    <Emoji
      key="1"
      renderUnicode
      emojiLargeSize="3em"
      emojiPath="{{hexcode}}"
      emojiSize="1em"
      emojiSource={{ compact: false, locale: "en", version: "latest" }}
      emoticon=""
      enlargeEmoji={false}
      hexcode="1F415"
      shortcode=""
      unicode="🐕️"
    >
      <span>🐕️</span>
    </Emoji>
     shortcodes.
  </div>
</Element>
`;
